make sure sidebar can overflow

--- a/services/web/src/layouts/Sidebar/sidebar.less
+++ b/services/web/src/layouts/Sidebar/sidebar.less
@@ -33,6 +33,7 @@
     padding: @padding;
     background-color: #f8fafc;
     border-right: 1px solid rgba(0,0,0,.05);
+    overflow-y: auto;
 
     &--offscreen {
       box-shadow: 0 0 4px rgba(0,0,0,.2);
